# poetry-path-issue

./: README.md  pyproject.toml
appname-pkg3/: pyproject.toml
appname-pkg3/appname/pkg3/: sample.py
appname/pkg1/: sample.py
